# PixelCrew

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  hq.py  pixelcrew.example.json  pixelcrew.py  project-hq.example.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  OPERATING_MODEL.md  PROJECT_CHARTER_TEMPLATE.md  QUICKSTART.md  SECRETARY.md  TASK_BRIEF_TEMPLATE.md
docs/product/: CYCLE_1_REVIEW.md  ITERATION_PROCESS.md  PRODUCT_MANAGER.md  PRODUCT_REQUIREMENTS.md  README.md  ROADMAP.md  TECHNICAL_REVIEW.md  UX_REVIEW.md
examples/: demo-status.json
scripts/: init_project.py
src/agent_project_hq/: __init__.py  server.py
src/pixelcrew/: __init__.py  cli.py  secretary.py  server.py
src/pixelcrew/web/: index.html
tests/: test_cli.py  test_server.py
web/: index.html
