[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelcrew"
version = "0.4.0"
description = "A read-only pixel office dashboard and operating model for Codex multi-task projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "PixelCrew contributors"}]
dependencies = []

[project.scripts]
pixelcrew = "pixelcrew.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pixelcrew = ["web/*.html", "web/*.svg"]
